# canvasapi

./: Cargo.toml
src/: blueprint_course.rs  canvas.rs  course.rs  enrollment.rs  error.rs  from_response.rs  grading_period.rs  lib.rs  models.rs  timestamps.rs  user.rs
src/api/: courses.rs  users.rs
src/models/: courses.rs  enrollments.rs  permissions.rs  users.rs
