[package]
name = "canvasapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.36", features = ["serde", "serde-well-known", "parsing"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.59"
futures = "0.3.30"
